@@ -1,7 +1,7 @@
 #!/bin/sh
 ### ====================================================================== ###
 ##                                                                          ##
-##  Mobicents Media Server Bootstrap Script                                 ##
+##  RestComm Media Server Bootstrap Script                                  ##
 ##                                                                          ##
 ### ====================================================================== ###
 
@@ -165,7 +165,7 @@ fi
 # Display our environment
 echo "=============================================================================="
 echo ""
-echo "  MMS Bootstrap Environment"
+echo "  RestComm Media Server Bootstrap Environment"
 echo ""
 echo "  MMS_HOME: $MMS_HOME"
 echo ""
@@ -194,7 +194,5 @@ echo ""
          -Djava.ext.dirs="$MMS_ENDORSED_DIRS" \
          -Dmbrola.base="$MMS_HOME/mbrola" \
          -classpath "$MMS_CLASSPATH" \
-         org.mobicents.media.server.bootstrap.Main "$@"
+         org.restcomm.media.bootstrap.Main "$@"
       MMS_STATUS=$?
-
-#java -Djava.ext.dirs=`pwd`/lib -Dmms.home=. -cp .:mms-standalone-2.0.0.BETA1-SNAPSHOT.jar org.mobicents.media.server.bootstrap.jmx.JMXMain
